--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </ul>
 
         </div>
-        
+        <p>轉成有目錄的html方便閱讀 \(* ╰╯ *)/</p>
             </body>
       <script src="common.js"></script>
     </html>
